add elasticsearch setup on raspberry pi